V4 dashboard alignment & general fixes - Better default user/password - Add 'passwordChangeRequired' flag - Force min 8 length password - Fix default IP addresses string - Fix Casanet naming - Fix zipping backup cache - Open users API for non-admins too (restrict to only self-action) - Open version update status API for non-admins
